# multi-storage-client

./: .gitignore  flake.nix  justfile  pyproject.toml
.github/workflows/: .source.yml
.gitlab/pipelines/: .production.yml  .source.yml
.release_notes/: .unreleased.md  0.40.0.md  0.41.0.md  0.42.0.md
multi-storage-client/: justfile  pyproject.toml
multi-storage-client-docs/src/: index.rst
multi-storage-client-docs/src/references/: configuration.rst
multi-storage-client-docs/src/user_guide/: cli.rst  explorer.rst  multi_storage_file_system.rst  quickstart.rst  telemetry.rst
multi-storage-client/rust/src/: credentials.rs  lib.rs
multi-storage-client/src/multistorageclient/: config.py  file.py  shortcuts.py  utils.py
multi-storage-client/src/multistorageclient/client/: client.py  composite.py  single.py  types.py
multi-storage-client/src/multistorageclient/commands/cli/: main.py
multi-storage-client/src/multistorageclient/commands/cli/actions/: __init__.py  explorer.py
multi-storage-client/src/multistorageclient/explorer/api/: __init__.py  models.py  server.py
multi-storage-client/src/multistorageclient/instrumentation/: auth.py
multi-storage-client/src/multistorageclient/providers/: azure.py  base.py  gcs.py  oci.py  s3.py
multi-storage-client/src/multistorageclient/sync/: manager.py  monitors.py  producer.py  worker.py
multi-storage-client/src/multistorageclient/telemetry/: __init__.py
multi-storage-client/src/multistorageclient/telemetry/metrics/exporters/: otlp_mtls_vault.py
multi-storage-client/tests/test_multistorageclient/: test_safe_makedirs.py
multi-storage-client/tests/test_multistorageclient/benchmark/: evaluate_otel_impact.py
multi-storage-client/tests/test_multistorageclient/unit/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_pathlib.py  test_retry.py  test_shortcuts.py  test_sync.py  test_utils.py
multi-storage-client/tests/test_multistorageclient/unit/client/: test_client.py
multi-storage-client/tests/test_multistorageclient/unit/contrib/: test_async_fs.py  test_numpy.py  test_pickle.py  test_torch.py  test_xarray.py  test_zarr.py
multi-storage-client/tests/test_multistorageclient/unit/explorer/: __init__.py  conftest.py  test_api_endpoints.py  test_cli_action.py
multi-storage-client/tests/test_multistorageclient/unit/instrumentation/: test_vault_certificate_provider.py
multi-storage-client/tests/test_multistorageclient/unit/providers/: test_base_storage_provider.py  test_metadata_rewrite.py  test_s3_error_translation.py  test_storage_providers.py
multi-storage-client/tests/test_multistorageclient/unit/sync/: test_manager.py  test_monitors.py  test_producer.py  test_progress_bar.py  test_worker.py
multi-storage-client/tests/test_multistorageclient/unit/telemetry/metrics/exporters/: test_otlp_mtls.py  test_otlp_mtls_vault.py
multi-storage-explorer/: eslint.config.js  index.html  justfile  package-lock.json  package.json  vite.config.js  vitest.config.js
multi-storage-explorer/src/: App.jsx  main.jsx
multi-storage-explorer/src/__tests__/: App.test.jsx  setup.js
multi-storage-explorer/src/__tests__/components/: ConfigUploader.test.jsx  FileManager.test.jsx  FilePreview.test.jsx
multi-storage-explorer/src/__tests__/services/: api.test.js
multi-storage-explorer/src/components/: ConfigUploader.jsx  FileManager.jsx  FilePreview.jsx
multi-storage-explorer/src/mocks/: handlers.js  server.js
multi-storage-explorer/src/services/: api.js
multi-storage-file-system/: Dockerfile  README.md  backend.go  backend_aistore.go  backend_ram.go  backend_s3.go  cache.go  config.go  dev_setup.sh  dev_traffic.sh  docker-compose.yaml  fission.go  fs.go  garage.s3cfg  garage.sh  garage.toml  globals.go  grafana.ini  http.go  metrics.go  msfs_config_dev.json  msfs_config_dev.yaml
multi-storage-file-system/grafana-provisioning/dashboards/: dashboard-provider.yaml  msfs-dashboard.json
